@@ -1,5 +1,11 @@
 devel
 -----
+* fix internal issue #478: remove unused and undocumented REST API endpoints
+  _admin/statistics/short and _admin/statistics/long.
+  These APIs were available in ArangoDB's REST API, but have not been called by
+  ArangoDB itself nor have they been part of the documented API. They have been
+  superseded by other REST APIs and were partially dysfunctional. Therefore
+  these two endpoints have been removed entirely.
 
 * fix internal issue #1439: improve performance of any-iterator for RocksDB
 
